kubernetes/shipping-service/gateway.yml
#versi API Istio yang digunakan dalam konfigurasi. Versi ini mengacu pada v1beta1 dari API Istio untuk Gateway.
apiVersion: networking.istio.io/v1beta1

#jenis objek k8s adalah gateway untuk konfigurasi lalu lintas kluster kubernetes dikelola oleh istio
kind: Gateway

##jenis objek k8s adalah gateway untuk konfigurasi lalu lintas kluster kubernetes dikelola oleh istio
metadata:
  #nama dari objek k8s ini adalah shipping-gateway
  name: shipping-gateway
  #mengatur namespace dari objek ini berada di istio-system
  namespace: istio-system

#mengatur spesifikasi dari objek k8s
spec:
  #memilih entitas yang akan menerima lalulintas, dalam hal ini ingressgateway untuk menangani ingress traffic 
  selector:
    istio: ingressgateway

  #Mendefinisikan server yang akan menerima lalu lintas masuk
  servers:
  - hosts:
    - "*"
    port:
      name: http  # Nama port, dalam hal ini "http"
      number: 80  # Nomor port yang akan digunakan (80 untuk protokol HTTP)
      protocol: HTTP  # Protokol yang akan digunakan (HTTP)
